integrations/salesforce/mdapi/objects/Booking__c.object
<CustomObject>
    <label>Test Drive Booking</label>
    <pluralLabel>Test Drive Bookings</pluralLabel>
    <nameField>
        <label>Booking Number</label>
        <type>AutoNumber</type>
        <displayFormat>TD-{00000}</displayFormat>
    </nameField>
    <!--
      Private, not Public Read/Write: a booking's Owner IS its assigned sales rep, so
      ownership must actually govern visibility — a rep should only see their own drives
      in native Salesforce. The backend integration user is a System Administrator
      (View All Data), so the TDM web app continues to see every booking regardless.

      Gotcha for future deploys: changing sharingModel on an ALREADY-EXISTING object is
      silently ignored when it rides along in a large multi-component deploy. Verify via
      Tooling API: query InternalSharingModel on EntityDefinition where QualifiedApiName
      equals Booking__c, and if it still reads ReadWrite, deploy this object on its own
      (or set it in Setup, Sharing Settings). A fresh org created from this metadata gets
      Private correctly on first deploy.
    -->
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Customer</label>
        <type>Lookup</type>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <required>true</required>
        <deleteConstraint>Restrict</deleteConstraint>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <type>Lookup</type>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <required>true</required>
        <deleteConstraint>Restrict</deleteConstraint>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Lookup</type>
        <referenceTo>Branch__c</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <required>true</required>
        <deleteConstraint>Restrict</deleteConstraint>
    </fields>
    <fields>
        <fullName>Drive_Type__c</fullName>
        <label>Drive Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Dealership</fullName><default>true</default></value>
                <value><fullName>Home</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Start__c</fullName>
        <label>Scheduled Start</label>
        <type>DateTime</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Scheduled_End__c</fullName>
        <label>Scheduled End</label>
        <type>DateTime</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Requested</fullName><default>true</default></value>
                <value><fullName>Confirmed</fullName><default>false</default></value>
                <value><fullName>Waitlisted</fullName><default>false</default></value>
                <value><fullName>InProgress</fullName><default>false</default></value>
                <value><fullName>Completed</fullName><default>false</default></value>
                <value><fullName>Cancelled</fullName><default>false</default></value>
                <value><fullName>NoShow</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Home_Latitude__c</fullName>
        <label>Home Latitude</label>
        <type>Number</type>
        <precision>9</precision>
        <scale>6</scale>
    </fields>
    <fields>
        <fullName>Home_Longitude__c</fullName>
        <label>Home Longitude</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>6</scale>
    </fields>
    <fields>
        <fullName>Check_In_Method__c</fullName>
        <label>Check-In Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>QR</fullName><default>false</default></value>
                <value><fullName>Manual</fullName><default>true</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_In_Timestamp__c</fullName>
        <label>Check-In Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_End__c</fullName>
        <label>Actual End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Odometer_Start__c</fullName>
        <label>Odometer Start</label>
        <type>Number</type>
        <precision>9</precision>
        <scale>1</scale>
    </fields>
    <fields>
        <fullName>Odometer_End__c</fullName>
        <label>Odometer End</label>
        <type>Number</type>
        <precision>9</precision>
        <scale>1</scale>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Rescheduled_From__c</fullName>
        <label>Rescheduled From</label>
        <type>Lookup</type>
        <referenceTo>Booking__c</referenceTo>
        <relationshipName>Rescheduled_Bookings</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
    <fields>
        <fullName>Waitlist_Position__c</fullName>
        <label>Waitlist Position</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Text</type>
        <length>80</length>
    </fields>
    <fields>
        <fullName>Preferred_Variant__c</fullName>
        <label>Preferred Variant</label>
        <type>Lookup</type>
        <referenceTo>Vehicle_Variant__c</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
    <fields>
        <fullName>Is_Existing_Customer__c</fullName>
        <label>Is Existing Customer</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Current_Vehicle_Owned__c</fullName>
        <label>Current Vehicle Owned</label>
        <type>Text</type>
        <length>120</length>
    </fields>
    <fields>
        <fullName>Purchase_Timeline__c</fullName>
        <label>Purchase Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Immediate</fullName><default>false</default></value>
                <value><fullName>Within_1_Month</fullName><default>false</default></value>
                <value><fullName>Within_3_Months</fullName><default>false</default></value>
                <value><fullName>Within_6_Months</fullName><default>false</default></value>
                <value><fullName>Just_Exploring</fullName><default>true</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pickup_Required__c</fullName>
        <label>Pickup Required</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>LongTextArea</type>
        <length>4000</length>
    </fields>
    <fields>
        <fullName>Staff_Notes__c</fullName>
        <label>Staff Notes</label>
        <description>Internal notes maintained by the assigned sales rep / management — never shown to the customer.</description>
        <type>LongTextArea</type>
        <length>4000</length>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <label>Dealership</label>
        <type>Lookup</type>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Dealership the drive is booked with; drives dealership-scoped access.</description>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <type>Lookup</type>
        <referenceTo>Vehicle_Model__c</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Model the customer asked to drive (the stock unit is Vehicle__c).</description>
    </fields>
    <sharingReasons>
        <fullName>TDM_Dealership__c</fullName>
        <label>TDM Dealership</label>
    </sharingReasons>
    <validationRules>
        <fullName>Branch_Belongs_To_Dealership</fullName>
        <active>true</active>
        <description>Keeps a booking's branch inside its own dealership, so dealership-scoped access can never leak across dealers.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Branch__c)), NOT(ISBLANK(Dealership__c)), Branch__r.Dealership__c &lt;&gt; Dealership__c)</errorConditionFormula>
        <errorDisplayField>Branch__c</errorDisplayField>
        <errorMessage>The selected branch belongs to a different dealership.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealership_Required</fullName>
        <active>true</active>
        <description>Every booking belongs to a dealership: dealership-scoped sharing (TdmRecordSharing) has nothing to grant on a record without one.</description>
        <errorConditionFormula>ISBLANK(Dealership__c)</errorConditionFormula>
        <errorDisplayField>Dealership__c</errorDisplayField>
        <errorMessage>Select the dealership this record belongs to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vehicle_Belongs_To_Dealership</fullName>
        <active>true</active>
        <description>Keeps a booking on a vehicle of its own dealership, so one dealer can never book (or see through a booking) another dealer's stock.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Vehicle__c)), NOT(ISBLANK(Dealership__c)), Vehicle__r.Dealership__c &lt;&gt; Dealership__c)</errorConditionFormula>
        <errorDisplayField>Vehicle__c</errorDisplayField>
        <errorMessage>The selected vehicle belongs to a different dealership.</errorMessage>
    </validationRules>
</CustomObject>